--- a/DotNetLab/WpfSamples/MainWindow.xaml
+++ b/DotNetLab/WpfSamples/MainWindow.xaml
@@ -8,5 +8,7 @@
         Width="525"
         Height="350"
         mc:Ignorable="d">
-    <Grid />
+    <Grid >
+        <Button Content="Button" HorizontalAlignment="Left" Margin="46,37,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+    </Grid>
 </Window>
